[package]
authors = ["a@b.com"]
edition = "2021"
name    = "ldk-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ldk-node = "0.1.0"
napi = { version = "2.13.3", default-features = false, features = [
    "napi8",
    "serde-json",
] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
