[package]
authors = ["Bitcoin Zavior <BitcoinZavior@gmail.com>"]
edition = "2021"
name = "ldk-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ldk-node = "0.1.0"
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", branch = "main" }
napi = { version = "2.13.3", default-features = false, features = [
    "napi8",
    "async",
    "tokio_rt",
    "napi6",
] }
napi-derive = "2.12.2"
serde = "1.0.188"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
